--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,4 +61,5 @@ set_target_properties(MediaPlayer PROPERTIES OUTPUT_NAME "MediaPlayer")
 target_link_libraries(MediaPlayer 
 	"${CMAKE_SOURCE_DIR}/lib/littlehooker.lib"
 	"${CMAKE_SOURCE_DIR}/lib/minhook.x64.lib"
+	"${CMAKE_SOURCE_DIR}/lib/nbsparser.lib"
 )
