--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-win:
     runs-on: windows-latest
     steps:
       - name: Checkout code
@@ -30,3 +30,35 @@ jobs:
           name: artifact
           path: |
             ./build/Debug
+
+  build-linux:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.0.0
+
+      - name: Install Packages
+        run: |
+          sudo apt update && sudo apt upgrade -y
+          sudo apt install -y python3 python3-pip cmake zip unzip libc++1-12 libc++abi-12-dev libc++-12-dev libc++abi1-12 clang-12
+          python3 -m pip install --upgrade pip
+          pip install lief
+
+      - name: Build
+        run: mkdir -p build bds/mods && cd build && cmake -DCMAKE_C_COMPILER=clang-12 -DCMAKE_CXX_COMPILER=clang++-12 -DCMAKE_INSTALL_PREFIX=../bds/ .. && make && make install && cd ..
+
+      - name: Upload build files
+        uses: actions/upload-artifact@v3.1.3
+        with:
+          name: artifact
+          path: |
+            ./build/Debug/
+
+      - name: Test
+        run: |
+          cd bds
+          curl -fsSLO https://minecraft.azureedge.net/bin-linux/bedrock-server-1.20.41.02.zip
+          unzip -q *.zip
+          python3 ../tools/patchlib.py
+          chmod +x bedrock_server_symbols_patched.debug
+          timeout 10 bash -c "LD_PRELOAD=../lib/libserver_modloader.so ./bedrock_server_symbols_patched.debug"
