ci: remove apt upgrade

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Install Packages
         run: |
-          sudo apt update && sudo apt upgrade -y
+          sudo apt update
           sudo apt install -y python3 python3-pip cmake zip unzip libc++1-12 libc++abi-12-dev libc++-12-dev libc++abi1-12 clang-12
           python3 -m pip install --upgrade pip
           pip install lief
