ci: fix artifact upload path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
         with:
           name: artifact
           path: |
-            ./build/Debug/
+            ./build/
 
       - name: Test
         run: |
