--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Upload build files
         uses: actions/upload-artifact@v3.1.3
         with:
-          name: artifact
+          name: artifact-win
           path: |
             ./build/Debug
 
@@ -50,7 +50,7 @@ jobs:
       - name: Upload build files
         uses: actions/upload-artifact@v3.1.3
         with:
-          name: artifact
+          name: artifact-linux
           path: |
             ./build/
 
