--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,30 @@ on:
         type: string
 
 jobs:
+  build-linux:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.0.0
+
+      - name: Install Packages
+        run: |
+          sudo apt update
+          sudo apt install -y cmake libc++1-12 libc++abi-12-dev libc++-12-dev libc++abi1-12 clang-12
+
+      - name: Build
+        run: mkdir -p build && cd build && cmake -DCMAKE_C_COMPILER=clang-12 -DCMAKE_CXX_COMPILER=clang++-12 -DCMAKE_INSTALL_PREFIX=../bds/ .. && make && make install && cd ..
+
+      - name: Upload build files
+        uses: actions/upload-artifact@v3.1.3
+        with:
+          name: libMediaPlayer.so
+          path: |
+            ./build/libMediaPlayer.so
+
+
   release:
+    needs: build-linux
     runs-on: windows-latest
     steps:
       - name: Checkout code
@@ -80,9 +103,14 @@ jobs:
           cmake -S . -B build
           cmake --build build/ --config ${{ inputs.solution }} -j
 
+      - uses: actions/download-artifact@v3
+        with:
+          name: libMediaPlayer.so
+
       - name: Organize files
         run: |
           mkdir ./release/MediaPlayer/video
+          cp ./libMediaPlayer.so ./release/
           cp ./build/${{ inputs.solution }}/MediaPlayer.dll ./release/
           cp ./build/${{ inputs.solution }}/MediaPlayer.pdb ./release/
           cp ./build/${{ inputs.solution }}/convert.exe ./release/MediaPlayer/video
@@ -99,7 +127,7 @@ jobs:
         uses: actions/upload-artifact@v3.1.3
         if: inputs.artifact
         with:
-          name: build
+          name: artifact-win
           path: ./build/${{ inputs.solution }}
 
       - name: Release
@@ -134,7 +162,7 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git commit -a -m "v${{ steps.rel_info.outputs.tag_name }}"
-          
+
       - name: Push tooth
         uses: ad-m/github-push-action@master
         with:
