ci: rename step name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,6 +103,7 @@ jobs:
           cmake -S . -B build
           cmake --build build/ --config ${{ inputs.solution }} -j
 
+      - name: Download linux build
       - uses: actions/download-artifact@v3
         with:
           name: libMediaPlayer.so
