--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
 
   build-linux:
     runs-on: ubuntu-20.04
+    if: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.0.0
